// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGridScores DataGridScores creates a CSV as expected 1`] = `"data:text/csv;charset=utf-8,%22Draft%20ID%22%0A%22mock-draft-id%22%0A%22mock-draft-id2%22"`;

exports[`DataGridScores DataGridScores creates a CSV as expected 2`] = `"data:text/csv;charset=utf-8,%22Draft%20ID%22%2C%22Example%20ID%22%0A%22mock-draft-id%22%2C%22mock-example-id%22%0A%22mock-draft-id2%22%2C%22mock-example-id2%22"`;

exports[`DataGridScores DataGridScores renders correctly 1`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores renders one row 1`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores renders when no rows given 1`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={Array []}
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores uses search filters as expected 1`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores uses search filters as expected 2`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores uses search filters as expected 3`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores uses search filters as expected 4`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores uses search filters as expected 5`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores uses search filters as expected 6`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;

exports[`DataGridScores DataGridScores uses search filters as expected 7`] = `
<div
  className="repository--data-grid-scores"
>
  <div
    className="data-grid"
  >
    <div
      className="react-data-table-component"
      columns={
        Array [
          Object {
            "advanced": false,
            "name": "Draft ID",
            "selector": "draftId",
            "sortable": true,
          },
        ]
      }
      data={Array []}
      dense={true}
      pagination={true}
      paginationComponentOptions={
        Object {
          "noRowsPerPage": true,
        }
      }
      paginationPerPage={250}
      paginationRowsPerPageOptions={
        Array [
          250,
        ]
      }
      striped={true}
      title="Mock Table Name"
    >
      react-data-table-component
    </div>
  </div>
</div>
`;
